# memelol

./: .gitignore  README.md  package.json
contracts/: Cargo.toml  build.sh
contracts/coin/: Cargo.toml
contracts/coin/src/: lib.rs  utils.rs
